--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @FilePath: \ccit-admin-to-web\public\index.html
+ * @Author: maggot-code
+ * @Date: 2022-02-23 10:01:05
+ * @LastEditors: maggot-code
+ * @LastEditTime: 2022-09-16 15:28:46
+ * @Description: 
+-->
 <!DOCTYPE html>
 <html>
 
@@ -7,9 +15,11 @@
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title><%= webpackConfig.name %></title>
+  <title>
+    <%= webpackConfig.name %>
+  </title>
   <script src="<%= BASE_URL %>cdn/echarts/4.2.1/echarts.min.js"></script>
-  <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=iHQRxUUPUieREGHxAsn4TjRvsCouanYa"></script>
+  <!-- <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=iHQRxUUPUieREGHxAsn4TjRvsCouanYa"></script> -->
 </head>
 
 <body>
